# tokenizationsolana

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
.github/workflows/: build.yml
app/: next.config.ts  package.json
app/src/: client.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/create/: page.tsx
app/src/app/dashboard/: page.tsx
app/src/app/properties/: page.tsx
app/src/app/properties/[id]/: page.tsx
app/src/components/: ClientProviders.tsx  MortgageCalculator.tsx  Navbar.tsx  PropertyCard.tsx  WalletProvider.tsx
app/src/hooks/: useHomeCrowd.ts
app/src/lib/: LangContext.tsx  campaignStore.tsx  constants.ts  i18n.ts  utils.ts
docs/: ARCHITECTURE.md  WHY_SOLANA.md
migrations/: deploy.ts
programs/asset-tokenization/: Cargo.toml
programs/asset-tokenization/src/: lib.rs
programs/asset-tokenization/src/errors/: mod.rs
programs/asset-tokenization/src/instructions/: asset.rs  compliance.rs  mod.rs  platform.rs  purchase.rs  tokenize.rs  valuation.rs  yield_dist.rs
programs/asset-tokenization/src/state/: asset.rs  investor.rs  mod.rs  platform.rs
programs/homecrowd/: Cargo.toml
programs/homecrowd/src/: lib.rs
tests/: asset-tokenization.ts  homecrowd.ts
