[package]
name = "asset-tokenization"
version = "0.1.0"
description = "Solana program for tokenizing real-world assets (RWA) into fractional SPL tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asset_tokenization"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
